[Wandy] - NA: Corrects vertical spacing of photo-caption

--- a/themes/main/src/sass/nacional.scss
+++ b/themes/main/src/sass/nacional.scss
@@ -315,7 +315,7 @@
 
   @include media-query(FIVE){
     width: 2 * $COLUMN-WIDTH;
-    padding-top: 35px;
+    padding-top: 25px;
   }
 }
 
